--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#2B4EFF</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccentDark">#05675D</color>
+    <color name="colorOrange">#FF9800</color>
+    <color name="colorRed">#FF0000</color>
+    <color name="colorGreen">#2DFF00</color>
+    <color name="colorBlackLight">#80000000</color>
+    <color name="colorGreyLight">#F3F3F3</color>
 </resources>
