--- a/app/src/main/res/layout/statistics_fragment.xml
+++ b/app/src/main/res/layout/statistics_fragment.xml
@@ -6,7 +6,7 @@
     android:background="@color/colorPrimary">
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
+        android:id="@+id/guidelineTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -18,7 +18,7 @@
         android:id="@+id/viewTop"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,11 +43,11 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/dp_10"
         android:contentDescription="@null"
-        app:layout_constraintBottom_toTopOf="@+id/toggle"
+        app:layout_constraintBottom_toTopOf="@+id/radioGroupToggleInformation"
         app:layout_constraintEnd_toStartOf="@+id/textViewStayAtHome"
-        app:layout_constraintStart_toEndOf="@+id/guideline"
+        app:layout_constraintStart_toEndOf="@+id/guidelineTop"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintTop_toBottomOf="@+id/titleStatisticScreen"
         app:srcCompat="@drawable/img_drcorona" />
 
     <View
@@ -61,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@+id/viewTop" />
 
     <RadioGroup
-        android:id="@+id/toggle"
+        android:id="@+id/radioGroupToggleInformation"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_50"
         android:layout_marginStart="@dimen/dp_50"
@@ -121,7 +121,7 @@
         android:text="@string/text_is_stay_at_home"
         android:textColor="@android:color/white"
         android:textSize="@dimen/sp_18"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="@+id/viewTop"
@@ -138,7 +138,7 @@
         android:textColor="@android:color/black"
         android:textSize="@dimen/sp_18"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toggle" />
+        app:layout_constraintTop_toBottomOf="@+id/radioGroupToggleInformation" />
 
     <TextView
         android:id="@+id/textViewUpdateTime"
@@ -159,7 +159,7 @@
         android:textColor="@color/colorAccent"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toggle" />
+        app:layout_constraintTop_toBottomOf="@+id/radioGroupToggleInformation" />
 
     <View
         android:id="@+id/viewStatistics"
@@ -281,7 +281,7 @@
         app:layout_constraintTop_toBottomOf="@+id/buttonDeath" />
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/titleStatisticScreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_24"
