--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,8 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorAccentDark">#05675D</color>
     <color name="colorOrange">#FF9800</color>
-    <color name="colorRed">#FF0000</color>
-    <color name="colorGreen">#2DFF00</color>
+    <color name="colorRed">#DD0606</color>
+    <color name="colorGreen">#23B305</color>
     <color name="colorBlackLight">#80000000</color>
     <color name="colorGreyLight">#F3F3F3</color>
 </resources>
