--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -155,6 +155,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_36"
         android:layout_marginEnd="@dimen/dp_36"
+        android:drawableEnd="@drawable/ic_navigate_next_green_24dp"
+        android:gravity="center"
         android:text="@string/text_see_detail"
         android:textColor="@color/colorAccent"
         android:visibility="invisible"
