--- a/app/src/main/res/layout/item_recyclerview_home.xml
+++ b/app/src/main/res/layout/item_recyclerview_home.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:layout_marginStart="@dimen/dp_10"
-    android:layout_marginEnd="@dimen/dp_10"
+    android:layout_margin="@dimen/dp_10"
+    android:elevation="@dimen/dp_5"
     android:background="@drawable/view_background">
 
     <ImageView
